# task-management-api

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  config.py  logger.py  pyproject.toml
app/: auth.py  database.py  exceptions.py  main.py  models.py  notifications.py  router.py  schemas.py  weather.py
app/api/v1/: router.py  tasks.py
app/models/: __init__.py  task.py
app/schemas/: __init__.py
app/services/: notification.py  weather.py
backend/: pyproject.toml
backend/app/: config.example.yaml  main.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/schemas/: task.py
backend/app/services/: cache.py  weather.py
backend/tests/api/: test_exceptions.py
backend/tests/services/: test_cache.py  test_weather.py
docs/: CV.md  Python面试题.md  Python面试题_中文.md  valid.md
tests/: conftest.py  test_cache.py  test_exceptions.py  test_notifications.py  test_tasks.py  test_validation.py  test_weather.py
tests/services/: test_weather.py
